# is-it-monday

./: .env.example  Makefile  README.md  index.html  kustomization.yaml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: app.rs  cleaner.rs  db.rs  http.rs  main.rs  surveyor.rs
frontend/: Dockerfile  README.md  index.html  package.json
frontend/js/: package.json
frontend/js/src/: api.ts  error.ts
frontend/src/: api.ts  submission.ts  summary.ts  survey.ts
kubernetes/: ingress.yaml
kubernetes/backend/: service.yaml  statefulset.yaml
kubernetes/frontend/: deployment.yaml  service.yaml
