[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
futures = "0.3.31"
libsql = { version = "0.9.29", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[dev-dependencies]
axum = { version = "0.8.7", features = ["macros"] }
